--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/app.js"></script>
+    <script type="module" src="./src/main.js"></script>
+    <script src="./src/style.css"></script>
   </body>
 </html>
